# dupdel

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yaml  test.yml
src/: app.py  dup_del.py
src/dupdel/: __init__.py  cache.py  constants.py  core.py  text.py  ui.py
tests/: test_app.py  test_cache.py  test_core.py  test_text.py  test_typecheck.py  test_ui.py
